force-app/main/default/objects/Dossier__c/fields/Date_prevue_eclatement_titre__c.field-meta.xml
<CustomField>
    <fullName>Date_prevue_eclatement_titre__c</fullName>
    <label>Date prévue d&apos;éclatement de titre</label>
    <type>Date</type>
</CustomField>