force-app/main/default/objects/Dossier__c/fields/Date_promise_de_compl_tude_de_dossier__c.field-meta.xml
<CustomField>
    <fullName>Date_promise_de_compl_tude_de_dossier__c</fullName>
    <label>Date promise de complétude de dossier</label>
    <type>Date</type>
</CustomField>