force-app/main/default/objects/Dossier__c/fields/Date_RDV_Banque__c.field-meta.xml
<CustomField>
    <fullName>Date_RDV_Banque__c</fullName>
    <label>Date RDV Banque</label>
    <type>Date</type>
</CustomField>