force-app/main/default/objects/Dossier__c/fields/Decision_Banque__c.field-meta.xml
<CustomField>
    <fullName>Decision_Banque__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Attente accord avec OPC</label>
    <type>Checkbox</type>
</CustomField>