force-app/main/default/objects/Dossier__c/fields/Decision_banque_re_Retour_charges__c.field-meta.xml
<CustomField>
    <fullName>Decision_banque_re_Retour_charges__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Decision banque re- Retour à charges</label>
    <type>Checkbox</type>
</CustomField>