force-app/main/default/objects/Dossier__c/fields/Delai_d_obtention_d_accord__c.field-meta.xml
<CustomField>
    <fullName>Delai_d_obtention_d_accord__c</fullName>
    <formula>Date_accord_dossier__c    -  Date_depot_dossier__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Delai d&apos;obtention d&apos;accord</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>