force-app/main/default/objects/Dossier__c/fields/Delai_deblocage__c.field-meta.xml
<CustomField>
    <fullName>Delai_deblocage__c</fullName>
    <formula>IF(
( Dossier_d_bloqu__c = False) &amp;&amp;
( Env_contr_pret_signes_leg_bq__c = True),
TODAY() - D_Env_contr_pret_signes_leg_bq__c,

IF(
( Dossier_d_bloqu__c = True),
 Date_deblocage__c - D_Env_contr_pret_signes_leg_bq__c,

0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Délai de déblocage depuis sign des CP</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>