force-app/main/default/objects/Dossier__c/fields/Delai_lead_to_dossier__c.field-meta.xml
<CustomField>
    <fullName>Delai_lead_to_dossier__c</fullName>
    <formula>( Date_deblocage__c  -  Lead_Created_Date__c ) / 30</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Delai lead to dossier</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>