force-app/main/default/objects/Dossier__c/fields/Depot_Banque__c.field-meta.xml
<CustomField>
    <fullName>Depot_Banque__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dépôt Banque P1</label>
    <type>Checkbox</type>
</CustomField>