force-app/main/default/objects/Dossier__c/fields/Depot_Banque_P2_3__c.field-meta.xml
<CustomField>
    <fullName>Depot_Banque_P2_3__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dépôt Banque P2et3</label>
    <type>Checkbox</type>
</CustomField>