force-app/main/default/objects/Dossier__c/fields/DEPOT_DOSSIER_MONTH__c.field-meta.xml
<CustomField>
    <fullName>DEPOT_DOSSIER_MONTH__c</fullName>
    <formula>MONTH( Date_depot_dossier__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DEPOT_DOSSIER_MONTH</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>