force-app/main/default/objects/Dossier__c/fields/Descriptif__c.field-meta.xml
<CustomField>
    <fullName>Descriptif__c</fullName>
    <label>Descriptif</label>
    <length>255</length>
    <type>Text</type>
</CustomField>