force-app/main/default/objects/Dossier__c/fields/Devis_d_architecte__c.field-meta.xml
<CustomField>
    <fullName>Devis_d_architecte__c</fullName>
    <inlineHelpText>D Devis d&apos;architecte - - Signé-e &amp; Cacheté-e</inlineHelpText>
    <label>D Devis d&apos;architecte-Signé-e &amp; Cacheté-e</label>
    <type>Date</type>
</CustomField>