force-app/main/default/objects/Dossier__c/fields/Devis_d_architecte_Sign_e_Cachet_e__c.field-meta.xml
<CustomField>
    <fullName>Devis_d_architecte_Sign_e_Cachet_e__c</fullName>
    <label>Devis d&apos;architecte-Signé-e &amp; Cacheté-e</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Non requis</fullName>
            </value>
            <value>
                <fullName>Requis</fullName>
            </value>
            <value>
                <fullName>Reçu copie</fullName>
            </value>
            <value>
                <fullName>Reçu original</fullName>
            </value>
            <value>
                <fullName>Reçu copie &amp; original</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>