force-app/main/default/objects/Dossier__c/fields/Devis_de_construction__c.field-meta.xml
<CustomField>
    <fullName>Devis_de_construction__c</fullName>
    <inlineHelpText>Devis de construction fournie par l&apos;architecte ou l&apos;entreprise de construction - 3 mois - Signé-e &amp; Cacheté-e - Copie</inlineHelpText>
    <label>Devis de construction</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Requis</fullName>
            </value>
            <value>
                <fullName>Non requis</fullName>
                <default>true</default>
                <label>Non requis</label>
            </value>
            <value>
                <fullName>Reçu copie</fullName>
            </value>
            <value>
                <fullName>Reçu original</fullName>
            </value>
            <value>
                <fullName>Reçu copie &amp; original</fullName>
            </value>
            <value>
                <fullName>REQUIS P1</fullName>
                <isActive>false</isActive>
                <label>REQUIS P1</label>
            </value>
            <value>
                <fullName>REQUIS P2</fullName>
                <isActive>false</isActive>
                <label>REQUIS P2</label>
            </value>
            <value>
                <fullName>REQUIS P3</fullName>
                <isActive>false</isActive>
                <label>REQUIS P3</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>