force-app/main/default/objects/Dossier__c/fields/Dossier_accord_Y_N__c.field-meta.xml
<CustomField>
    <fullName>Dossier_accord_Y_N__c</fullName>
    <formula>If(Transmettre_Dossier_l_agence__c = True  ||  Dossier_d_bloqu__c = True || Facture_Payee_global__c =True,True,False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dossier accordé Y/N ?</label>
    <type>Checkbox</type>
</CustomField>