force-app/main/default/objects/Dossier__c/fields/Dossier_Complet__c.field-meta.xml
<CustomField>
    <fullName>Dossier_Complet__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dossier complet P1</label>
    <type>Checkbox</type>
</CustomField>