force-app/main/default/objects/Dossier__c/fields/Dossier_complet_P2_3__c.field-meta.xml
<CustomField>
    <fullName>Dossier_complet_P2_3__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dossier complet P2et3</label>
    <type>Checkbox</type>
</CustomField>