force-app/main/default/objects/Dossier__c/fields/Dossier_Constitue_P1__c.field-meta.xml
<CustomField>
    <fullName>Dossier_Constitue_P1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dossier Constitué P1</label>
    <type>Checkbox</type>
</CustomField>