force-app/main/default/objects/Dossier__c/fields/Dossier_d_bloqu__c.field-meta.xml
<CustomField>
    <fullName>Dossier_d_bloqu__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dossier débloqué</label>
    <type>Checkbox</type>
</CustomField>