force-app/main/default/objects/Dossier__c/fields/Dossier_debloque_systeme_banque__c.field-meta.xml
<CustomField>
    <fullName>Dossier_debloque_systeme_banque__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dossier débloqué système banque</label>
    <type>Checkbox</type>
</CustomField>