force-app/main/default/objects/Dossier__c/fields/Dossier_Incomplet__c.field-meta.xml
<CustomField>
    <fullName>Dossier_Incomplet__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fond de dossier (3P) incomplet</label>
    <type>Checkbox</type>
</CustomField>