force-app/main/default/objects/Dossier__c/fields/Dossier_Perdu__c.field-meta.xml
<CustomField>
    <fullName>Dossier_Perdu__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dossier Perdu</label>
    <type>Checkbox</type>
</CustomField>