force-app/main/default/objects/Dossier__c/fields/Dossier_quality_score__c.field-meta.xml
<CustomField>
    <fullName>Dossier_quality_score__c</fullName>
    <formula>(IF  (ISBLANK(Commentaires_financement__c ),0,1)
+ IF (ISBLANK ( Etape_Actuelle__c ),0,1)
+ IF (ISBLANK ( N_CIN__c ), 0,0.5 )
+ IF (ISBLANK( Montant_du_Financement__c  ),0,0.5)
+ IF ( 
       CONTAINS(Etape_Actuelle__c, &apos;perdu&apos;)
       &amp;&amp; ISPICKVAL (Raison_perdu__c, &quot;&quot;) 
       &amp;&amp;  ISBLANK (Raison_perdu_2_D_tail__c)
       ,0,1)
+ IF( ISBLANK ( Banque__r.Name),0,1)
+ IF( ISPICKVAL(  VILLE_BANQUE__c , &quot;&quot; ),0,1)
+ IF( ISBLANK (  Agence_bancaire__r.Agence_bancaire__c ),0,1)
+ IF( ISBLANK (  Super_agence__r.Name ),0,1)
+ IF( ISBLANK ( Super_banquier__r.Name ),0,1)
+ IF ( ISPICKVAL (  Prospect_ou_Client_V_A_V_de_la_banque__c, &quot;&quot;),0,1)

) / 10</formula>
    <label>Dossier quality score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>