force-app/main/default/objects/Dossier__c/fields/Dossier_Remp__c.field-meta.xml
<CustomField>
    <fullName>Dossier_Remp__c</fullName>
    <formula>If( Montant_du_Financement__c  &lt;&gt; 0,True,False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dossier_Remp</label>
    <type>Checkbox</type>
</CustomField>