force-app/main/default/objects/Dossier__c/fields/Dossier_Vide__c.field-meta.xml
<CustomField>
    <fullName>Dossier_Vide__c</fullName>
    <formula>If( Montant_du_Financement__c = 0,True,False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dossier_Vide</label>
    <type>Checkbox</type>
</CustomField>