force-app/main/default/objects/Dossier__c/fields/Dossier_won_Y_N__c.field-meta.xml
<CustomField>
    <fullName>Dossier_won_Y_N__c</fullName>
    <formula>If( Doss_Temp__c  = &quot;Won&quot;,True,False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dossier won Y/N?</label>
    <type>Checkbox</type>
</CustomField>