force-app/main/default/objects/Dossier__c/fields/Dte_cheque_banque_remis_au_notaire__c.field-meta.xml
<CustomField>
    <fullName>Dte_cheque_banque_remis_au_notaire__c</fullName>
    <label>Dte cheque banque remis au notaire</label>
    <type>Date</type>
</CustomField>