force-app/main/default/objects/Dossier__c/fields/Dte_contrat_legalise_remis_pr_client__c.field-meta.xml
<CustomField>
    <fullName>Dte_contrat_legalise_remis_pr_client__c</fullName>
    <label>Dte contrat légalisé remis pr client</label>
    <type>Date</type>
</CustomField>