force-app/main/default/objects/Dossier__c/fields/Dte_Dossier_Constitue_P1__c.field-meta.xml
<CustomField>
    <fullName>Dte_Dossier_Constitue_P1__c</fullName>
    <label>Dte - Dossier Constitué P1</label>
    <type>Date</type>
</CustomField>