force-app/main/default/objects/Dossier__c/fields/Dte_dossier_perdu__c.field-meta.xml
<CustomField>
    <fullName>Dte_dossier_perdu__c</fullName>
    <label>Dte dossier perdu</label>
    <type>Date</type>
</CustomField>