force-app/main/default/objects/Dossier__c/fields/Dte_edition_des_contrats_de_pret__c.field-meta.xml
<CustomField>
    <fullName>Dte_edition_des_contrats_de_pret__c</fullName>
    <label>Dte edition des contrats de prêt</label>
    <type>Date</type>
</CustomField>