force-app/main/default/objects/Dossier__c/fields/Dte_min_etablie_par_le_notaire__c.field-meta.xml
<CustomField>
    <fullName>Dte_min_etablie_par_le_notaire__c</fullName>
    <label>Dte min etablie par le notaire</label>
    <type>Date</type>
</CustomField>