force-app/main/default/objects/Dossier__c/fields/Dte_RDV_Ouverture_de_compte__c.field-meta.xml
<CustomField>
    <fullName>Dte_RDV_Ouverture_de_compte__c</fullName>
    <label>Dte RDV Ouverture de compte</label>
    <type>Date</type>
</CustomField>