force-app/main/default/objects/Dossier__c/fields/Dte_Virement_du_premier_salaire_domicile__c.field-meta.xml
<CustomField>
    <fullName>Dte_Virement_du_premier_salaire_domicile__c</fullName>
    <label>Dte-Virement du premier salaire domicile</label>
    <type>Date</type>
</CustomField>