force-app/main/default/objects/Dossier__c/fields/Dur_e_du_cr_dit_en_ann_es_OB__c.field-meta.xml
<CustomField>
    <fullName>Dur_e_du_cr_dit_en_ann_es_OB__c</fullName>
    <label>Durée du crédit en années - OB</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>