force-app/main/default/objects/Dossier__c/fields/Dur_e_du_cr_dit_en_d_ann_es_OC__c.field-meta.xml
<CustomField>
    <fullName>Dur_e_du_cr_dit_en_d_ann_es_OC__c</fullName>
    <label>Durée du crédit en # d&apos;années- OC</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>