force-app/main/default/objects/Dossier__c/fields/Edition_du_contrat_de_pr_t__c.field-meta.xml
<CustomField>
    <fullName>Edition_du_contrat_de_pr_t__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Edition des contrats de prêt</label>
    <type>Checkbox</type>
</CustomField>