force-app/main/default/objects/Dossier__c/fields/En_cours__c.field-meta.xml
<CustomField>
    <fullName>En_cours__c</fullName>
    <label>En cours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>