force-app/main/default/objects/Dossier__c/fields/Engagement_domiciliation_revenus__c.field-meta.xml
<CustomField>
    <fullName>Engagement_domiciliation_revenus__c</fullName>
    <inlineHelpText>Engagement de domiciliation de revenus - Récente de 2 mois - Signé et légalisé - P1 Copie P2 Original</inlineHelpText>
    <label>Engagement de domiciliation de revenus</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Requis</fullName>
            </value>
            <value>
                <fullName>Non requis</fullName>
                <default>true</default>
                <label>Non requis</label>
            </value>
            <value>
                <fullName>Reçu copie</fullName>
            </value>
            <value>
                <fullName>Reçu original</fullName>
            </value>
            <value>
                <fullName>Reçu copie &amp; original</fullName>
            </value>
            <value>
                <fullName>REQUIS P1</fullName>
                <isActive>false</isActive>
                <label>REQUIS P1</label>
            </value>
            <value>
                <fullName>REQUIS P2</fullName>
                <isActive>false</isActive>
                <label>REQUIS P2</label>
            </value>
            <value>
                <fullName>REQUIS P3</fullName>
                <isActive>false</isActive>
                <label>REQUIS P3</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>