force-app/main/default/objects/Dossier__c/fields/Env_acc_sign_cach_ou_OPC_not__c.field-meta.xml
<CustomField>
    <fullName>Env_acc_sign_cach_ou_OPC_not__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Env de l&apos;acc sign cach ou l&apos;OPC au not</label>
    <type>Checkbox</type>
</CustomField>