force-app/main/default/objects/Dossier__c/fields/Env_contr_pret_signes_leg_bq__c.field-meta.xml
<CustomField>
    <fullName>Env_contr_pret_signes_leg_bq__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Env des contr de prêt signés leg à la bq</label>
    <type>Checkbox</type>
</CustomField>