force-app/main/default/objects/Dossier__c/fields/Env_cp_contr_not_pour_ed_min__c.field-meta.xml
<CustomField>
    <fullName>Env_cp_contr_not_pour_ed_min__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Env copie contr au not pour l&apos;éd de min</label>
    <type>Checkbox</type>
</CustomField>