force-app/main/default/objects/Dossier__c/fields/Env_min_serv_jur_via_ag_pour_val__c.field-meta.xml
<CustomField>
    <fullName>Env_min_serv_jur_via_ag_pour_val__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Env min au serv jur(via ag)pour val</label>
    <type>Checkbox</type>
</CustomField>