force-app/main/default/objects/Dossier__c/fields/Envoi_des_conditions1_au_client__c.field-meta.xml
<CustomField>
    <fullName>Envoi_des_conditions1_au_client__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Envoi des conditions 1 au client</label>
    <type>Checkbox</type>
</CustomField>