force-app/main/default/objects/Dossier__c/fields/Equivalent_de_bilan__c.field-meta.xml
<CustomField>
    <fullName>Equivalent_de_bilan__c</fullName>
    <inlineHelpText>Equivalent de bilan -  - Signé-e &amp; Cacheté-e par le client et son comptable - P1 Copie P2 Original</inlineHelpText>
    <label>Equivalent de bilan</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Requis</fullName>
            </value>
            <value>
                <fullName>Non requis</fullName>
                <default>true</default>
                <label>Non requis</label>
            </value>
            <value>
                <fullName>Reçu copie</fullName>
            </value>
            <value>
                <fullName>Reçu original</fullName>
            </value>
            <value>
                <fullName>Reçu copie &amp; original</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>