force-app/main/default/objects/Dossier__c/fields/Etape_Actuelle__c.field-meta.xml
<CustomField>
    <fullName>Etape_Actuelle__c</fullName>
    <label>Etape Actuelle</label>
    <length>100</length>
    <type>Text</type>
</CustomField>