force-app/main/default/objects/Dossier__c/fields/Etat_de_la_construction__c.field-meta.xml
<CustomField>
    <fullName>Etat_de_la_construction__c</fullName>
    <label>Etat de la construction</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Titré</fullName>
                <default>true</default>
                <label>Titré</label>
            </value>
            <value>
                <fullName>Gros Œuvres</fullName>
            </value>
            <value>
                <fullName>Sur Plan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>