force-app/main/default/objects/Dossier__c/fields/Exemplaires_docs_envoyes_au_client__c.field-meta.xml
<CustomField>
    <fullName>Exemplaires_docs_envoyes_au_client__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exemplaires de docs envoyés au client</label>
    <type>Checkbox</type>
</CustomField>