force-app/main/default/objects/Dossier__c/fields/Expertise_du_bien_realisee__c.field-meta.xml
<CustomField>
    <fullName>Expertise_du_bien_realisee__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Expertise du bien réalisée</label>
    <type>Checkbox</type>
</CustomField>