force-app/main/default/objects/Dossier__c/fields/Facture_avancee__c.field-meta.xml
<CustomField>
    <fullName>Facture_avancee__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Facture avancée</label>
    <type>Checkbox</type>
</CustomField>