force-app/main/default/objects/Dossier__c/fields/Facture_deposee__c.field-meta.xml
<CustomField>
    <fullName>Facture_deposee__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Facture déposée</label>
    <type>Checkbox</type>
</CustomField>