force-app/main/default/objects/Dossier__c/fields/Facture_Payee__c.field-meta.xml
<CustomField>
    <fullName>Facture_Payee__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Facture payée en totalité</label>
    <type>Checkbox</type>
</CustomField>