force-app/main/default/objects/Dossier__c/fields/Facture_payee_en_partie__c.field-meta.xml
<CustomField>
    <fullName>Facture_payee_en_partie__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Facture payée en partie</label>
    <type>Checkbox</type>
</CustomField>