force-app/main/default/objects/Dossier__c/fields/Facture_Payee_global__c.field-meta.xml
<CustomField>
    <fullName>Facture_Payee_global__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Facture Payée</label>
    <type>Checkbox</type>
</CustomField>